<resources>
    <string name="recover_password">Recover password</string>
    <string name="red_wings_logo">Red wings </string>
    <string name="donate_process_chart">donate process chart</string>


    <string name="a">A+</string>
    <string name="ab">AB+</string>
    <string name="o">O+</string>
    <string name="az">A-</string>
    <string name="oneg">O-</string>
    <string name="apos">a+</string>
    <string name="abneg">AB-</string>
    <string name="bneg">B-</string>
    <string name="bpos">B+</string>
    <string name="select_your_blood">Select your Patient blood type</string>
    <string name="create_account">Create Account</string>
    <string name="app_name">Red Wings</string>
    <string name="red_wings">Red Wings logo</string>

    /*splash Main*/
    <string name="next">Next</string>
    <string name="skip">skip</string>
    <string name="start">GET STARTED</string>

    /*Main*/
    <string name="is_the_best_place">Is the best place to manage \n  your<Font color="#c8c7c8">Blood Donation</Font></string>
    <string name="content_des_main_img">it describes donation process</string>
    <string name="log_in">log in</string>
    <string name="create_acoount">Create An Acoount</string>

    /*splash0*/
    <string name="donation_process_img">donation process</string>
    <string name="saving_a_soul">“There is no great joy than saving \n a soul.”</string>
    <string name="opportunities_knock_the_door_sometimes_so_don_t_let_it_go_and_donate_blood">Opportunities knock the door sometimes,\n so don’t let it go and donate blood.</string>

    /*splash1*/
    <string name="donor_is_a_hero">Every Blood Donor Is A Hero</string>
    <string name="a_single_pint">A single pint can save three lives, \n  a single gesture can create a million smiles</string>
    /*splash2*/
    <string name="loctionForDonation">loction For Donation</string>
    <string name="splash2">A few drops of your blood can help a life to bloom</string>
    <string name="splash2txt">all blood banks and campaigns locations are \n located in map so it became more easier to get to \n the nearest place</string>
    /*splash3*/
    <string name="splash3">Be a Life Guard. Give blood to \n  save life.</string>
    <string name="splash3Txt">help blood banks to get their needed blood units \n and save someone\'s life</string>
    <string name="help_doctor_to_save_lifes">help doctor to save lifes</string>
    /*Sign in*/
    <string name="welcome_txt">Welcome , Start \n controlling donations</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="have_an_account">Do not have an account? sign up</string>
    <string name="email">Email address </string>

    <string name="backIcon">back_icon</string>
    /*Sign UP*/
    <string name="enterName">Full name</string>
    <string name="start_journey">Start Your Journey \n With Us</string>
    <string name="privacy_policy">By signing up you accept the Terms of \n Service and Privacy Policy.</string>
    <string name="date_of_birth">Birthday</string>
    <string name="do_have_an_account">Do have an account? Sign in</string>
    <string name="sign_up">Sign Up</string>

    /*forget password*/
    <string name="recoverPassText">Enter your email and we’ll send you \n instructions on how to reset your password.</string>
    <string name="forgotPassword">Forget password</string>

    /*check email*/
    <string name="check_email">Check Your Email</string>
    <string name="close">close</string>
    <string name="we_ve_sent_instructions">We’ve sent instructions on how to reset \n  The password (also check the Spam folder).</string>
    <string name="go_to_email">Go To Email</string>

    /*map*/
    <string name="title_activity_maps">Map</string>

    /*add request*/
    <string name="add_request">Need A Blood ?</string>
    <string name="add_reqTxt">Here you can ask our community members to donate for you by completing the form down here</string>
    <string name="which_hospital">in which hospital are you?</string>
    <string name="add_number">add number</string>
    <string name="patient_file_no">Enter patient file number</string>
    <string name="select_one_please">select one please</string>
    <string name="blood_type_needed">Blood Type needed</string>
    <string name="number_of_units">Enter number of units</string>
    <string name="hospital">Hospital</string>
    <string name="notes">Notes</string>
    <string name="add_notes">add notes</string>
    <string name="add_req">add Request</string>
    /*donation_history*/
    <string name="SignIn_txt">Welcome back! \n You’ve been missed</string>
    <string name="donation_history">Donation History</string>
    <string name="blood_drop">blood drop</string>
    <string name="Donation_type">Donation Type</string>
    <string name="blood_bank">Blood Bank</string>
    <string name="al_aqsa_hospital">Al-Aqsa Hospital</string>
    <string name="_13_5_2020">13/5/2020</string>
    <string name="date">date</string>
    <string name="filter">filter</string>

    <string name="api_Key">AIzaSyDMCd0ZnC9MEooFSIUmbLuKu6-aXirOuxA</string>
    <string name="blood_bank_icon">blood bank icon</string>
    <string name="location_discription">location discription</string>
    <string name="al_shifa_hospital">Al-shifa hospital</string>
    <string name="_15_blood_unit_needed">15 BLOOD UNIT NEEDED</string>
    <string name="_497_evergreen_rd_roseville">497 Evergreen Rd. Roseville</string>
    <string name="more_info">more info</string>

    <string name="title_activity_tab">MainActivity</string>
    /*tab fragment*/
    <string name="title_home">Home</string>
    <string name="title_dashboard">history</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_map">map</string>
    <string name="ok">OK</string>
    <string name="update_password">Update Password</string>
    <string name="enter_your_old_password">Enter your old password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="save">Save</string>
    <string name="location">Location</string>
    <string name="work_days">WORK DAYS</string>
    <string name="work_hours">WORK HOURS</string>
    <string name="textview">TextView</string>
    <string name="empty">empty</string>
    <string name="no_donation_yet">No donation yet</string>
    <string name="pre_donation_check">Pre-donation Check</string>
    <string name="period">period</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="are_you_in_your_period_time">Are You in your period time ?</string>
    <string name="do_you_take_any_medicine">Do you take any medicine ?</string>
    <string name="do_you_have_any_disease">Do you have any disease ?</string>
    <string name="sorry_it_is_not_good_for_your_health_to_donate_in_the_time_of_your_period_wait_till_the_end_of_your_period">
        Sorry, It is not good for your health to donate \n in the time of your period wait till the end of \n your period !!</string>
    <string name="stay_warm_and_drink_lots_of_fluids">Stay Warm And Drink Lots Of Fluids</string>
    <string name="advice">Advice</string>
    <string name="after_donating_you_should">After donating, You should :</string>
    <string name="workout">work Out</string>
    <string name="if_you_feel_lightheaded_lie_down_with_your_n_feet_up_until_the_feeling_passes">If you feel lightheaded, lie down with your \n feet up until the feeling passes.</string>
    <string name="drink_extra_fluids_for_the_next_day_n_or_two">Drink extra fluids for the next day \n or two.</string>
    <string name="avoid_strenuous_physical_activity_or_heavy_n_lifting_for_the_next_five_hours">Avoid strenuous physical activity or heavy \n lifting for the next five hours.</string>
    <string name="it_s_time_to_n_give">IT\'S TIME TO
         \n GIVE</string>
    <string name="book">Book</string>
    <string name="tasneem_khrais">Tasneem khrais</string>
    <string name="settings">settings</string>
    !-- *** view user request interface text **** -->
    <string name="paragraph_request">I need your help my friend, needs a lot of blood unit
        due to the accident he faced, help me to make him get back to his family save and healthy.
    </string>

    <!--    ***   about interface text   ****  -->
    <string name="about_paragraph">We collect information about how you use our Products,
        such as the types of content that you view or engage with,the
        features you use, the actions you take, the people or accounts you interact with
        and the time, frequency and duration of your activities. For example, we log when you\'re
        using and have last used our Products, and what posts, videos and other content you view
        on our Products. We also collect information about how you use features such
        as our camera.
    </string>

    <!--    ***   contact us interface text   ****  -->
    <string name="contact_us_paragraph">Whether you have a questions about feature
         or concerns .Our team is ready to answer
         all your questions
    </string>
    <string name="_10_request">10 request</string>
    <string name="second">second</string>
    <string name="counter_img">counter img</string>
    <string name="_5_donation">5 donation</string>
    <string name="_0">0</string>
    <string name="timer">timer</string>
    <string name="day">Day</string>
    <string name="hour">hour</string>
    <string name="minute">minute</string>
    <string name="why_should_i_wait">Why should I wait ?</string>
    <string name="to_whom_i_can_donate">To whom I can
        donate?</string>


</resources>
