<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/select_your_blood"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioOpos"
                style="@style/button"
                android:onClick="onRadioButtonClicked"
                android:text="@string/o" />

            <RadioButton
                android:id="@+id/radioOneg"
                style="@style/button"
                android:onClick="onRadioButtonClicked"
                android:text="@string/oneg" />

            <RadioButton
                android:id="@+id/radioApos"
                style="@style/button"
                android:onClick="onRadioButtonClicked"
                android:text="@string/a" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioAneg"
                style="@style/button"
                android:onClick="onRadioButtonClicked"
                android:text="@string/az" />

            <RadioButton
                android:id="@+id/radioBpos"
                style="@style/button"
                android:onClick="onRadioButtonClicked"
                android:text="@string/bpos" />

            <RadioButton
                android:id="@+id/radioBneg"
                style="@style/button"
                android:onClick="onRadioButtonClicked"
                android:text="@string/bneg" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioABpos"
                style="@style/button"
                android:onClick="onRadioButtonClicked"
                android:text="@string/ab" />

            <RadioButton
                android:id="@+id/radioABneg"
                style="@style/button"
                android:onClick="onRadioButtonClicked"
                android:text="@string/abneg" />

            <RadioButton
                android:id="@+id/radioButton6"
                style="@style/button"
                android:text="@string/apos"
                android:onClick="onRadioButtonClicked"
                android:visibility="invisible" />
        </LinearLayout>

    </RadioGroup>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ok"
        android:text="OK"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        />

</LinearLayout>