<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginRight="16dp"
    android:layout_marginEnd="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorLight"
        android:orientation="horizontal"
        android:padding="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight=".5"
            android:contentDescription="@string/blood_bank_icon"
            app:srcCompat="@drawable/hospitals"
            tools:ignore="VectorDrawableCompat" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/al_shifa_hospital"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:drawableLeft="@drawable/ic_near_me_24px"
                android:drawablePadding="8dp"
                android:text="@string/_497_evergreen_rd_roseville"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:drawableStart="@drawable/no_of_blood_unitsforhospital"
                android:drawableLeft="@drawable/no_of_blood_unitsforhospital"
                android:drawablePadding="8dp"
                android:text="@string/_15_blood_unit_needed"
                android:textSize="12sp" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_weight=".5"
            android:background="@null"
            app:srcCompat="@drawable/more_icon"
            tools:ignore="VectorDrawableCompat"
            android:contentDescription="@string/more_info" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>